--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
   </div>
   <div class="wrapper">
     <div>
-      <h2>Регистрация в Гите</h2>
+      <b class="upper">Регистрация в Гите</b>
+      <div class="cont-ball">
+        <span class="ball"></span>
+      </div>
       <div>
         <b>- git --version</b><i>Проверка версии GIT</i>
       </div>
@@ -45,7 +48,10 @@
       </div>
     </div>
     <div>
-      <h2>Работа в Гите</h2>
+      <b class="upper">Работа в Гите</b>
+      <div class="cont-ball">
+        <span class="ball"></span>
+      </div>
       <div>
         <b>- git init</b><i>Создание нового репозитория</i>
       </div>
