--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
   <div class="wrapper">
     <div>
-      <b class="upper">Регистрация в Гите</b>
+      <h2>Регистрация в Гите</h2>
       <div class="cont-ball">
         <span class="ball"></span>
       </div>
@@ -48,7 +48,7 @@
       </div>
     </div>
     <div>
-      <b class="upper">Работа в Гите</b>
+      <h2>Работа в Гите</h2>
       <div class="cont-ball">
         <span class="ball"></span>
       </div>
