--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
   <div class="wrapper">
     <div>
-      <h2>Регистрация в Гите</h2>
+      <h2>Регистрация в GIT</h2>
       <div class="cont-ball">
         <span class="ball"></span>
       </div>
@@ -48,7 +48,7 @@
       </div>
     </div>
     <div>
-      <h2>Работа в Гите</h2>
+      <h2>Работа в GIT</h2>
       <div class="cont-ball">
         <span class="ball"></span>
       </div>
@@ -65,7 +65,8 @@
         <b>- git add Имя файла</b><i> Подготовка файлов перед коммитом. Добавляется указанный файл</i>
       </div>
       <div>
-        <b>- git add .</b><i>Подготовка файлов перед коммитом. Добавляются все файлы проекта</i>
+        <b>- git add .</b><i>Подготовка файлов перед коммитом. Добавляются все файлы проекта. Эту команду нужно
+          повторять после создания нового файла, если предыдущие файлы уже добавлены в коммит</i>
       </div>
       <div>
         <b>- git rm --cached Имя файла</b><i>Отменяет подготовку файла перед коммитом, оставив его при этом в рабочем
@@ -73,9 +74,6 @@
       </div>
       <div>
         <b>- git config --global core.autocrlf false</b><i>Решает ошибку "warning: CRLF will be replaced by LF."</i>
-      </div>
-      <div>
-        <b>- git commit</b><i>Создание коммита</i>
       </div>
       <div>
         <b>- git commit -m "комментарий"</b><i>Создание коммита. Позволяет задать комментарий к коммиту</i>
@@ -90,10 +88,12 @@
         <b>- git commit --amend --no-edit</b><i>Обновляем коммит, текст коммита не меняется</i>
       </div>
       <div>
-        <b>- git commit --amend -m "Текст"</b><i>Обновляем коммит с изменением текста</i>
+        <b>- git commit --amend -m "комментарий"</b><i>Обновляем коммит с изменением текста</i>
       </div>
       <div>
-        <b>- git add . && git commit -m "updated 3 html"</b><i></i>
+        <b>- git add . && git commit -m "комментарий"</b><i>Одновременно делает команды "git commit -m" и "git add .".
+          Полезна когда одновременно создаем новый файл в проетке и вносим изменения в уже существующий и добавленный в
+          коммит файл. </i>
       </div>
       <div>
         <b>- git reset --soft HEAD^</b><i>Команда отменит последний коммит (но не изменения, они сохранятся). Все это
