--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
   </div>
   <div class="wrapper">
     <div>
-<<<<<<< HEAD
       <h2>Регистрация в GIT</h2>
-=======
-      <h2>Регистрация в Гите</h2>
->>>>>>> 2cef985fe3f9c9cb820ce5a1ccde50d904e0c160
       <div class="cont-ball">
         <span class="ball"></span>
       </div>
@@ -52,11 +48,7 @@
       </div>
     </div>
     <div>
-<<<<<<< HEAD
-      <h2>Работа в GIT</h2>
-=======
       <h2>Работа в Гите</h2>
->>>>>>> 2cef985fe3f9c9cb820ce5a1ccde50d904e0c160
       <div class="cont-ball">
         <span class="ball"></span>
       </div>
@@ -100,7 +92,8 @@
       </div>
       <div>
         <b>- git add . && git commit -m "комментарий"</b><i>Одновременно делает команды "git commit -m" и "git add .".
-          Полезна когда одновременно создаем новый файл в проетке и вносим изменения в уже существующий и добавленный в
+          Полезна когда одновременно создаем новый файл в проетке и вносим изменения в уже существующий и добавленный
+          в
           коммит файл. </i>
       </div>
       <div>
