--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       <span class="ball"></span>
       <span class="ball"></span>
       <span class="ball"></span>
-      <span class="ball"></span>
     </div>
   </div>
   <div class="wrapper">
@@ -98,14 +97,16 @@
       </div>
       <div>
         <b>- git reset --soft HEAD^</b><i>Команда отменит последний коммит (но не изменения, они сохранятся). Все это
-          работает, если вы не опубликовали свои изменения</i>
+          работает, если вы не опубликовали свои изменения командой "git push"</i>
       </div>
       <div>
-        <b>- git reset --hard HEAD^ </b><i>Последний коммит можно полностью удалить. Все это работает, если вы не
-          опубликовали свои изменения</i>
+        <b>- git reset --hard HEAD~1 </b><i>Команда полностью удаляет последний коммит (можно удалять любой комит,
+          поменяв цифру 1 на порядковый номер нужного коммита). Все это работает, если вы не
+          опубликовали свои изменения командой "git push"</i>
       </div>
       <div>
-        <b>- git revert commit-sha1</b><i>Отменяет опубликованый коммит. Потом опубликовать его командой git push</i>
+        <b>- git revert commit-sha1</b><i>Отменяет опубликованый коммит. Потом можно опубликовать его командой git
+          push</i>
       </div>
       <div>
         <b>- git restore filename</b><i></i>
