--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
         <span class="ball"></span>
       </div>
       <div>
-        <b>- git --version</b><i>Проверка версии GIT</i>
+        <b>git --version</b><i>Проверка версии GIT</i>
       </div>
       <div>
-        <b>- git config</b><i>Просматривает и
+        <b>git config</b><i>Просматривает и
           устанавливет параметры</i>
       </div>
       <div>
-        <b>- git config --global user.name "Имя"</b><i>Задать ваше имя</i>
+        <b>git config --global user.name "Имя"</b><i>Задать ваше имя</i>
       </div>
       <div>
-        <b>- git config --global user.email Ваша @ почта</b><i>Задать вашу почту</i>
+        <b>git config --global user.email Ваша @ почта</b><i>Задать вашу почту</i>
       </div>
       <div>
-        <b>- git config --list</b><i>Получение списка всех настроек</i>
+        <b>git config --list</b><i>Получение списка всех настроек</i>
       </div>
     </div>
     <div>
@@ -52,112 +52,111 @@
         <span class="ball"></span>
       </div>
       <div>
-        <b>- git init</b><i>Создание нового репозитория</i>
+        <b>git init</b><i>Создание нового репозитория</i>
       </div>
       <div>
-        <b>- git status</b><i>Отображение текущего статуса файлов</i>
+        <b>git status</b><i>Отображение текущего статуса файлов</i>
       </div>
       <div>
-        <b>- git status --untracked-files=all</b><i>Отображение текущего статуса файлов, включая файлы в папках</i>
+        <b>git status --untracked-files=all</b><i>Отображение текущего статуса файлов, включая файлы в папках</i>
       </div>
       <div>
-        <b>- git add Имя файла</b><i> Подготовка файлов перед коммитом. Добавляется указанный файл</i>
+        <b>git add Имя файла</b><i> Подготовка файлов перед коммитом. Добавляется указанный файл</i>
       </div>
       <div>
-        <b>- git add .</b><i>Подготовка файлов перед коммитом. Добавляются все файлы проекта. Эту команду нужно
+        <b>git add .</b><i>Подготовка файлов перед коммитом. Добавляются все файлы проекта. Эту команду нужно
           повторять после создания нового файла, если предыдущие файлы уже добавлены в коммит</i>
       </div>
       <div>
-        <b>- git rm --cached Имя файла</b><i>Отменяет подготовку файла перед коммитом, оставив его при этом в рабочем
+        <b>git rm --cached Имя файла</b><i>Отменяет подготовку файла перед коммитом, оставив его при этом в рабочем
           каталоге</i>
       </div>
       <div>
-        <b>- git config --global core.autocrlf false</b><i>Решает ошибку "warning: CRLF will be replaced by LF."</i>
+        <b>git config --global core.autocrlf false</b><i>Решает ошибку "warning: CRLF will be replaced by LF."</i>
       </div>
       <div>
-        <b>- git commit -m "комментарий"</b><i>Создание коммита. Позволяет задать комментарий к коммиту</i>
+        <b>git commit -m "комментарий"</b><i>Создание коммита. Позволяет задать комментарий к коммиту</i>
       </div>
       <div>
-        <b>- git commit -a -m "комментарий"</b><i>Создание коммита. Индексирует каждый уже отслеживаемый на момент
+        <b>git commit -a -m "комментарий"</b><i>Создание коммита. Индексирует каждый уже отслеживаемый на момент
           коммита
           файл,
           позволяя нам обойтись без git add</i>
       </div>
       <div>
-        <b>- git commit --amend --no-edit</b><i>Обновляем коммит, текст коммита не меняется</i>
+        <b>git commit --amend --no-edit</b><i>Обновляем коммит, текст коммита не меняется</i>
       </div>
       <div>
-        <b>- git commit --amend -m "комментарий"</b><i>Обновляем коммит с изменением текста</i>
+        <b>git commit --amend -m "комментарий"</b><i>Обновляем коммит с изменением текста</i>
       </div>
       <div>
-        <b>- git add . && git commit -m "комментарий"</b><i>Одновременно делает команды "git commit -m" и "git add .".
+        <b>git add . && git commit -m "комментарий"</b><i>Одновременно делает команды "git commit -m" и "git add .".
           Полезна когда одновременно создаем новый файл в проетке и вносим изменения в уже существующий и добавленный
-          в
-          коммит файл. </i>
+          в коммит файл. </i>
       </div>
       <div>
-        <b>- git reset --soft HEAD^</b><i>Команда отменит последний коммит (но не изменения, они сохранятся). Все это
+        <b>git reset --soft HEAD^</b><i>Команда отменит последний коммит (но не изменения, они сохранятся). Все это
           работает, если вы не опубликовали свои изменения командой "git push"</i>
       </div>
       <div>
-        <b>- git reset --hard HEAD~1 </b><i>Команда полностью удаляет последний коммит (можно удалять любой комит,
+        <b>git reset --hard HEAD~1 </b><i>Команда полностью удаляет последний коммит (можно удалять любой комит,
           поменяв цифру 1 на порядковый номер нужного коммита). Все это работает, если вы не
           опубликовали свои изменения командой "git push"</i>
       </div>
       <div>
-        <b>- git revert commit-sha1</b><i>Отменяет опубликованый коммит. Потом можно опубликовать его командой git
+        <b>git revert commit-sha1</b><i>Отменяет опубликованый коммит. Потом можно опубликовать его командой git
           push</i>
       </div>
       <div>
-        <b>- git restore filename</b><i></i>
+        <b>git restore filename</b><i>Востановить конкретный файл из последнего коммита</i>
       </div>
       <div>
-        <b>- git restore .</b><i></i>
+        <b>git restore .</b><i>Востановить все файлы из последнего коммита</i>
       </div>
       <div>
-        <b>- git log</b><i>Просмотр истории изменений</i>
+        <b>git log</b><i>Просмотр истории изменений</i>
       </div>
       <div>
-        <b>- git log --pretty</b><i></i>
+        <b>git log --pretty</b><i></i>
       </div>
       <div>
-        <b>- git checkout hash-commit </b> <i>переход на коммит</i>
+        <b>git checkout hash-commit </b> <i>переход на коммит</i>
       </div>
       <div>
-        <b>- git checkout branch-name </b><i>переход на ветку по имени</i>
+        <b>git checkout branch-name </b><i>переход на ветку по имени</i>
       </div>
       <div>
-        <b>- git checkout -b new-branch-name </b><i>создаем ветку и переходим на нее</i>
+        <b>git checkout -b new-branch-name </b><i>создаем ветку и переходим на нее</i>
       </div>
       <div>
-        <b>- git branch</b><i></i>
+        <b>git branch</b><i></i>
       </div>
       <div>
-        <b>- git branch -v</b><i></i>
+        <b>git branch -v</b><i></i>
       </div>
       <div>
-        <b>- git merge branch-name</b><i></i>
+        <b>git merge branch-name</b><i></i>
       </div>
       <div>
-        <b>- git remote</b><i></i>
+        <b>git remote</b><i></i>
       </div>
       <div>
-        <b>- git remote -v</b><i></i>
+        <b>git remote -v</b><i></i>
       </div>
       <div>
-        <b>- git remote rm origin</b><i></i>
+        <b>git remote rm origin</b><i></i>
       </div>
       <div>
-        <b>- git push -u origin master</b><i></i>
+        <b>git push -u origin master</b><i></i>
       </div>
       <div>
-        <b>- git push</b><i>Отправка на удаленнній сервер</i>
+        <b>git push</b><i>Отправка на удаленнній сервер</i>
       </div>
       <div>
-        <b>- git clone</b><i>Копирование с удаленного сервера</i>
+        <b>git clone</b><i>Копирование с удаленного сервера</i>
       </div>
       <div>
-        <b>- git pull</b><i>Скачивание с удаленного сервера</i>
+        <b>git pull</b><i>Скачивание с удаленного сервера</i>
       </div>
     </div>
 
