--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           устанавливет параметры</i>
       </div>
       <div>
-        <b>git config --global user.name "Имя"</b><i>Задать ваше имя</i>
+        <b>git config --global user.name "Имя"</b><i>Задать имя пользователя</i>
       </div>
       <div>
-        <b>git config --global user.email Ваша @ почта</b><i>Задать вашу почту</i>
+        <b>git config --global user.email Ваша @ почта</b><i>Задать почту пользователя</i>
       </div>
       <div>
         <b>git config --list</b><i>Получение списка всех настроек</i>
@@ -64,8 +64,9 @@
         <b>git add Имя файла</b><i> Подготовка файлов перед коммитом. Добавляется указанный файл</i>
       </div>
       <div>
-        <b>git add .</b><i>Подготовка файлов перед коммитом. Добавляются все файлы проекта. Эту команду нужно
-          повторять после создания нового файла, если предыдущие файлы уже добавлены в коммит</i>
+        <b>git add .</b><i>Подготовка файлов перед коммитом. Добавляются все файлы проекта. Эту команду можно
+          повторять вместо команды "git add Имя файла" после создания нового файла, если предыдущие файлы уже добавлены
+          в коммит</i>
       </div>
       <div>
         <b>git rm --cached Имя файла</b><i>Отменяет подготовку файла перед коммитом, оставив его при этом в рабочем
@@ -79,9 +80,7 @@
       </div>
       <div>
         <b>git commit -a -m "комментарий"</b><i>Создание коммита. Индексирует каждый уже отслеживаемый на момент
-          коммита
-          файл,
-          позволяя нам обойтись без git add</i>
+          коммита файл, позволяя нам обойтись без git add</i>
       </div>
       <div>
         <b>git commit --amend --no-edit</b><i>Обновляем коммит, текст коммита не меняется</i>
@@ -118,53 +117,72 @@
       </div>
       <div>
         <b>git log --pretty=format:"%h - %an, %ar - %s"</b><i>Изменение формата вывода коммитов. %h – показывает
-          короткий код коммита %an – автор коммита %ar – время, когда был сделан коммит %s – комментарий коммита</i>
+          короткий хеш-код коммита %an – автор коммита %ar – время, когда был сделан коммит %s – комментарий коммита</i>
       </div>
       <div>
         <b>git log --since=2.weeks</b><i>Команда с данным параметром выводит все коммиты за последние 2 недели</i>
       </div>
       <div>
         <b>$ git log -p -n</b><i>–p – показывает diff (дельту, разницу), внесенную каждым коммитом. –n – ограничит вывод
-          n последними записями.</i>
+          "n"-последними записями.</i>
       </div>
       <div>
-        <b>git checkout hash-commit </b> <i>Переход на коммит</i>
+        <b>git checkout короткий хэш коммита</b><i>Переход на определенную версию проекта по короткому хэшу коммита</i>
       </div>
       <div>
-        <b>git checkout branch-name </b><i>Переход на ветку по имени</i>
+        <b>git checkout master</b><i>Возврат к последнему актуальному коммиту ветки master</i>
       </div>
       <div>
-        <b>git checkout -b new-branch-name </b><i>Создаем ветку и переходим на нее</i>
+        <b>git branch новое имя ветки</b><i>Создать новую ветку с указанным именем, без переключения на нее</i>
       </div>
       <div>
-        <b>git branch</b><i></i>
+        <b>git checkout имя ветки </b><i>Переход на ветку по имени</i>
       </div>
       <div>
-        <b>git branch -v</b><i></i>
+        <b>git checkout -b новое имя ветки </b><i>Создать ветку и перейти на нее</i>
       </div>
       <div>
-        <b>git merge branch-name</b><i></i>
+        <b>git branch</b><i> Команда git branch без параметров отобразит список веток и укажет активную в данный момент
+          ветку</i>
       </div>
       <div>
-        <b>git remote</b><i></i>
+        <b>git branch -v</b><i>Команда с ключем –v отобразит список веток c коротким хэш-кодом последнего коммита и
+          комментарием к нему</i>
       </div>
       <div>
-        <b>git remote -v</b><i></i>
+        <b>git merge имя ветки</b><i>Сделать слияние веток. Нужно перейти на ветку, куда будем делать слияние, а в
+          команде прописать имя ветки откуда будем делать слияние. При кофликте слияний, лучьше всего править в
+          VSCode (встроенная утилита Merge Editor)</i>
       </div>
       <div>
-        <b>git remote rm origin</b><i></i>
+        <b>git merge --abort</b><i>Отменить слияние веток</i>
       </div>
       <div>
-        <b>git push -u origin master</b><i></i>
+        <b>git remote</b><i>Отображение подключенных к локальному проекту удаленных серверов</i>
       </div>
       <div>
-        <b>git push</b><i>Отправка на удаленнній сервер</i>
+        <b>git remote -v</b><i>Просмотр соответствия псевдонима и адреса репозитория GIT. fetch – путь, откуда мы будем
+          забирать файлы. push – путь, куда мы будем загружать файлы.</i>
       </div>
       <div>
-        <b>git clone</b><i>Копирование с удаленного сервера</i>
+        <b>git remote rm origin</b><i> Удаление ссылки на удаленный сервер с именем origin, связанный с
+          локальным репозиторием. Только после этого можно подключить новый репозиторий GitHub</i>
       </div>
       <div>
-        <b>git pull</b><i>Скачивание с удаленного сервера</i>
+        <b>git push -u имя сервера имя ветки</b><i>Первая выгрузка файлов активной ветки на удаленный репозиторий
+          (первичная отпрака, нужно указать имя активной ветки)</i>
+      </div>
+      <div>
+        <b>git push</b><i>Последующие отправки активной ветки на удаленный сервер</i>
+      </div>
+      <div>
+        <b>git clone имя сервера</b><i>Клонирование репозитория с удаленного сервера</i>
+      </div>
+      <div>
+        <b>git pull</b><i>Загрузка удаленных изменения в локальный репозиторий</i>
+      </div>
+      <div>
+        <b>git branch -a</b><i>Вывод информации о всех ветках репозитория, включая удаленные</i>
       </div>
       <div>
         <b>git help lof</b><i>Открывает FAQ (работает оффлайн)</i>
