--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </div>
       <div>
         <b>git merge имя ветки</b><i>Сделать слияние веток. Нужно перейти на ветку, куда будем делать слияние, а в
-          команде прописать имя ветки откуда будем делать слияние. При кофликте слияний, лучьше всего править в
+          команде прописать имя ветки откуда будем делать слияние. При кофликте слияний, лучше всего править в
           VSCode (встроенная утилита Merge Editor)</i>
       </div>
       <div>
