--- a/index.html
+++ b/index.html
@@ -168,8 +168,13 @@
           забирать файлы. push – путь, куда мы будем загружать файлы.</i>
       </div>
       <div>
+        <b>git remote add origin Ваш адрес на GitHub</b><i>Ваш адрес на GitHub, как и вся команда, берется с GitHub, при
+          создании репозитория.</i>
+      </div>
+      <div>
         <b>git remote rm origin</b><i> Удаление ссылки на удаленный сервер с именем origin, связанный с
-          локальным репозиторием. Только после этого можно подключить новый репозиторий GitHub</i>
+          локальным репозиторием. Только после этого можно подключить новый репозиторий GitHub выполнив команду git
+          remote add origin Ваш адрес на GitHub</i>
       </div>
       <div>
         <b>git push -u имя сервера имя ветки</b><i>Первая выгрузка файлов активной ветки на удаленный репозиторий
