--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <b>git config --list</b><i>Получение списка всех настроек</i>
     </div>
   </div>
-  <div>
+  <div class="wrapper">
 
     <h2>Работа в GIT</h2>
 
